# google-news-parser

./: .env.example  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  README.md  commands.txt  data.db3
src/: main.rs  messages.rs  utils.rs
src/google_news/: mod.rs
src/parse/: mod.rs
src/parser/: mod.rs  models.rs
src/parser/variants/: axios.rs  curbed.rs  fox_news.rs  helpers.rs  mod.rs  nypost.rs  sfchronicle.rs  sfexaminer.rs  sfstandard.rs
