[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
dotenv = "0.15.0"
exitfailure = "0.5.1"
failure = "0.1.8"
feed-rs = "1.3.0"
headless_chrome = "1.0.8"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
sanitize_html = "0.8.0"
scraper = "0.18.1"
serde = "1.0.192"
serde-xml-rs = "0.6.0"
serde_derive = { version = "1.0.192", features = ["deserialize_in_place"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
